<resources>
    <string name="app_name">SEA Salon</string>

    <string name="model_reference">Model Reference</string>
    <string name="title_activity_notification_pager">activity notification pager</string>
    <string name="tab_text_1">Reservation</string>
    <string name="tab_text_2">Proses</string>
    <string name="tab_text_3">History</string>

    <string name="tab_admin_1">Acc</string>
    <string name="tab_admin_2">Proses</string>
    <string name="tab_admin_3">Done</string>

    <string name="home">Home</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="service">Service</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="reservation">Reservation</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="status">Status</string>

    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="click_register">Click Register</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>